error.log
   Compiling monet v0.1.2 (/Users/dawei/way/monet/crates/monet)
error[E0261]: use of undeclared lifetime name `'a`
   --> crates/monet/src/routing/method_router.rs:243:35
    |
243 | impl<S, E> Clone for MethodRouter<'a, S, E> {
    |                                   ^^ undeclared lifetime
    |
help: consider introducing lifetime `'a` here
    |
243 | impl<'a, S, E> Clone for MethodRouter<'a, S, E> {
    |      +++

error[E0405]: cannot find trait `Future` in `H`
  --> crates/monet/src/handler_tower_impl.rs:28:40
   |
28 |     type Future = IntoServiceFuture<H::Future + 'a>;
   |                                        ^^^^^^ not found in `H`
   |
help: consider importing one of these traits
   |
 1 + use std::future::Future;
   |
 1 + use futures::Future;
   |
 1 + use futures_core::Future;
   |
 1 + use futures_util::Future;
   |
help: if you import `Future`, refer to it directly
   |
28 -     type Future = IntoServiceFuture<H::Future + 'a>;
28 +     type Future = IntoServiceFuture<Future + 'a>;
   |

error[E0782]: expected a type, found a trait
  --> crates/monet/src/handler_tower_impl.rs:28:37
   |
28 |     type Future = IntoServiceFuture<H::Future + 'a>;
   |                                     ^^^^^^^^^^^^^^

error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> crates/monet/src/routing/router_tower_impl.rs:61:6
   |
61 | impl<'a, B> TowerService<HttpRequest<'a, B>> for NotFound
   |      ^^ unconstrained lifetime parameter

error: lifetime may not live long enough
  --> crates/monet/src/routing/router.rs:50:33
   |
41 | impl<'a, S> Router<'a, S>
   |      -- lifetime `'a` defined here
...
50 |             catch_all_fallback: Fallback::Default(Route::new(NotFound)),
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this usage requires that `'a` must outlive `'static`
   |
   = note: requirement occurs because of the type `Fallback<'_, S>`, which makes the generic argument `'_` invariant
   = note: the enum `Fallback<'a, S, E>` is invariant over the parameter `'a`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: lifetime may not live long enough
  --> crates/monet/src/routing/router_tower_impl.rs:57:9
   |
34 | impl<'a, B> TowerService<HttpRequest<'a, B>> for Router<'a, ()>
   |      -- lifetime `'a` defined here
...
55 |     fn call(&mut self, req: HttpRequest<B>) -> Self::Future {
   |             - let's call the lifetime of this reference `'1`
56 |         let req = req.map(Body::new);
57 |         self.call_with_state(req, ())
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method was supposed to return data with lifetime `'a` but it is returning data with lifetime `'1`
   |
   = note: requirement occurs because of the type `RouteFuture<'_, Infallible>`, which makes the generic argument `'_` invariant
   = note: the struct `RouteFuture<'a, E>` is invariant over the parameter `'a`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

Some errors have detailed explanations: E0207, E0261, E0405, E0782.
For more information about an error, try `rustc --explain E0207`.
error: could not compile `monet` (lib) due to 6 previous errors
